syntax = "proto3";

option go_package = "github.com/rprtr258/kvadotest";

package booksearch;

// Books search service
service BookSearch {
  rpc Search (SearchRequest) returns (SearchReply);
}

// Books search request is either by author, or by content or by title
message SearchRequest {
  oneof request {
      string by_author = 1;
      string by_content = 2;
      string by_title = 3;
  }
}

// Books list response
message SearchReply {
  repeated Book books = 1;
}

// Book description
message Book {
  repeated string authors = 1;
  string title = 2;
  string content = 3;
}
